@@ -3867,8 +3867,8 @@
   "itemdesc-soyprep-cultured": "Seal in a barrel with 1 L of brine.",
   "item-soyprep-slurry": "Soybean slurry",
   "itemdesc-soyprep-slurry": "Squeeze in a fruit press to make soy sauce.",
-  "item-handbooktitle-soyprep": "Soy Sauce Preparation",
-  "item-handbooktext-soyprep": "Creating <a href=\"handbook://item-expandedfoods:soysauce\">soy sauce</a> is a multi-step process. First, soak soybeans in water for , whir.",
+  "item-handbooktitle-soyprep": "Soy Processing",
+  "item-handbooktext-soyprep": "Creating <a href=\"handbook://item-expandedfoods:soysauce\">soy sauce</a> or <a href=\"handbook://item-expandedfoods:soymilk-edible\">soy milk</a> is a multi-step process. First, soak soybeans in water for 1 week. The next steps depend on the desired result.<br><br><strong>Making Soy Sauce</strong><br>Roast the soaked soybeans in an oven, then grind the roasted soybeans in a quern. Mix the soybean powder with any grain to culture it. Soak the cultured soybeans with brine for one week to make a soybean slurry, which can be juiced in a fruit press into soy sauce.<br><br><strong>Making Soy Milk</strong><br>Place the soaked soybeans in your crafting grid to de-shell them, then combine with 1 L of water in the crafting grid to wet them. Grind the wettened soybeans in a quern to blend them, then juice the mixture in a fruit press to make soy milk.",
 
 
   "item-foodoilportion-soy": "Soybean oil portion",
