@@ -1,6 +1,6 @@
  {
 	"code": "soysoak",
-	"sealHours": 168,
+	"sealHours": 72,
 	"ingredients": [
 		{ "type": "item", "code": "waterportion",  "litres": 1 },
 		{ "type": "item", "code": "legume-*", "name": "legume", "quantity": 1, "allowedVariants": ["soybean" ] }
