@@ -103,7 +103,8 @@ REBALANCING:
 - Carrot can be added to fruit bread/muffins, similar to pumpkin
 - Cottage cheese patch adding "nutritionPropsWhenInMeal" removed - DONE!!!
 - All sauces are not drinkable; for food use only
-- Soy sauce requires 7 days in barrel, down from 14 - DONE!!!
+- Soaked soybeans require 3 days in barrel, down from 14 - DONE!!!
+- Cultured soybeans require 7 days in barrel, down from 14 - DONE!!!
 
 BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
